# rust-fullstack-example

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: db.rs  db.sql  error.rs  handler.rs  main.rs
backend/src/db/: owner.rs  pet.rs
common/: Cargo.toml
common/src/: lib.rs
devcontainer/: devcontainer.json
frontend/: Cargo.toml
frontend/src/: lib.rs
frontend/src/owner/: create.rs  detail.rs  list.rs
frontend/src/pet/: create.rs
