[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "=1.25.0", features = ["macros", "rt-multi-thread"] }
warp = "=0.3.3"
mobc = "=0.8.1"
mobc-postgres = { version = "=0.8.0", features = ["with-chrono-0_4", "with-serde_json-1"] }
serde_json = "1.0.93"
serde = { version = "=1.0.152", features = ["derive"] }
thiserror = "=1.0.38"
common = { version = "0.1.0", path = "../common" }
