[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.20"
wasm-bindgen = "0.2.67"
serde_json = "1.0.93"
serde = { version = "=1.0.152", features = ["derive"] }
anyhow = "1"
yew-router = "0.17.0"
common = { version = "0.1.0", path = "../common" }
